# obelisk1

./: .gitignore  Dockerfile  Makefile  README.md  obelisk.bat  pyproject.toml
examples/: Specification
examples/input/: p5Sample_MHDRS.tsv
obelisk/: __init__.py  __main__.py  config.py  views.py  views.pyx
obelisk/transform/: __init__.py  transform.py
